# sovereign-inference

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSING.md  Makefile  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: js.yml  python.yml
adapters/provider-akash/: README.md  pyproject.toml
adapters/provider-akash/src/sip_provider_akash/: __init__.py  provider.py  sdl.py
adapters/provider-akash/tests/: test_akash.py
adapters/provider-nosana/: README.md  pyproject.toml
adapters/provider-nosana/src/sip_provider_nosana/: __init__.py  job.py  provider.py
adapters/provider-nosana/tests/: test_nosana.py
adapters/runtime-llamacpp/: README.md  pyproject.toml
adapters/runtime-llamacpp/src/sip_runtime_llamacpp/: __init__.py  adapter.py
adapters/runtime-llamacpp/tests/: test_adapter.py  test_sip_runtime_llamacpp_smoke.py
adapters/runtime-ollama/: README.md  pyproject.toml
adapters/runtime-ollama/src/sip_runtime_ollama/: __init__.py  adapter.py
adapters/runtime-ollama/tests/: test_adapter.py  test_sip_runtime_ollama_smoke.py
adapters/runtime-vllm/: README.md  pyproject.toml
adapters/runtime-vllm/src/sip_runtime_vllm/: __init__.py
adapters/runtime-vllm/tests/: test_sip_runtime_vllm_smoke.py
apps/dashboard/: README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/dashboard/src/: App.test.tsx  App.tsx  Dashboard.tsx  api.ts  main.tsx  runtime.ts  styles.css  types.ts
apps/dashboard/src/components/: HardwareCard.tsx  ReceiptsPanel.tsx  RecommendationsTable.tsx  SharingPanel.tsx  StatusBar.tsx
apps/dashboard/src/onboarding/: Onboarding.test.tsx  Onboarding.tsx  api.ts
apps/desktop/: .gitignore  README.md  sidecar_entry.py  sip-app-server.spec
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/directory-service/: README.md  pyproject.toml
apps/directory-service/src/sip_directory_service/: __init__.py  app.py
apps/directory-service/tests/: test_directory_service.py
apps/openai-proxy/: README.md  pyproject.toml
apps/openai-proxy/src/sip_openai_proxy/: __init__.py  __main__.py  app.py  config.py  local_use.py  server.py  sources.py
apps/openai-proxy/tests/: test_config.py  test_local_use.py  test_openai_proxy.py  test_parent_watch.py  test_server.py  test_sources.py
apps/relay/: README.md  pyproject.toml
apps/relay/src/sip_relay/: __init__.py  app.py  client.py
apps/relay/tests/: test_relay.py
apps/router-demo/: README.md  pyproject.toml
apps/router-demo/src/sip_router_demo/: __init__.py  decentralized_demo.py  demo.py  discovery_demo.py  pay_demo.py  privacy_demo.py  supply_demo.py
apps/router-demo/tests/: test_decentralized_demo.py  test_discovery_demo.py  test_e2e.py  test_e2e_payment.py  test_privacy_demo.py  test_supply_demo.py
docs/: README.md  architecture.md  decision-log.md  glossary.md  go-to-market.md  mvp-and-demo.md  naming-and-brand.md  open-questions.md  opportunity.md  product-principles.md  references.md  risk-register.md  roadmap.md  threat-model.md  user-stories.md  vision.md
docs/adr/: 0001-license-split.md  0002-python-core-ts-frontend.md  0003-one-provider-per-request.md  README.md
docs/hackathon/: article-series.md  decentralizeai-submission.md  evidence-plan.md
docs/prd/: sin.md  sip-ai.md
docs/prd/archive/: prdpak-v0.1.2.md
docs/spec/: manifests.md  private-inference-credits.md  protocol-spec.md  provider-selection.md  receipts.md  transport-modes.md
docs/spec/schemas/: inference_receipt.schema.json  inference_voucher.schema.json  provider_manifest.schema.json
examples/: README.md  sample-receipt.json
registry/: README.md
registry/model-manifests/: llama-3.2-3b-instruct-gguf-q4_k_m.json  nomic-embed-text-v1.5-gguf-q8_0.json  phi-3.5-mini-instruct-gguf-q4_k_m.json  qwen-coder-7b-instruct-gguf-q4_k_m.json  qwen2.5-0.5b-instruct-gguf-q4_k_m.json
registry/provider-manifests/: example-sovereign-node.json
scripts/: setup.sh
sdk-js/: README.md  package.json
sdk-js/src/: client.ts  index.ts  types.ts
