[project]
name = "sip-provider-nosana"
version = "0.1.2"
description = "Nosana external-compute provider adapter: provision an inference endpoint on the Nosana GPU network and expose it as a SIP-AI provider."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "Joshua Warren" }]
dependencies = ["sip-compute", "sip-protocol"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sip_provider_nosana"]

[tool.uv.sources]
sip-compute = { workspace = true }
sip-protocol = { workspace = true }
