[project]
name = "sip-directory-service"
version = "0.1.2"
description = "Hosted SIP-AI provider directory: a relay where nodes announce signed manifests over HTTP and routers discover verified providers."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "Joshua Warren" }]
dependencies = ["sip-discovery", "sip-protocol", "fastapi>=0.110"]

[project.scripts]
sip-directory-service = "sip_directory_service.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sip_directory_service"]

[tool.uv.sources]
sip-discovery = { workspace = true }
sip-protocol = { workspace = true }
