[project]
name = "sip-openai-proxy"
version = "0.1.2"
description = "A local OpenAI-compatible endpoint for Sovereign Inference: point any OpenAI client at it and your requests route across the SIP-AI network with verified receipts."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "Joshua Warren" }]
dependencies = [
    "sip-router",
    "sip-discovery",
    "sip-policy",
    "sip-protocol",
    "sip-provider-gateway",
    "sip-pic",
    "sin-node",
    "sip-runtime-ollama",
    "sip-runtime-llamacpp",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[project.scripts]
sip-openai-proxy = "sip_openai_proxy.app:run"
sip-app-server = "sip_openai_proxy.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sip_openai_proxy"]

[tool.uv.sources]
sip-router = { workspace = true }
sip-discovery = { workspace = true }
sip-policy = { workspace = true }
sip-protocol = { workspace = true }
sip-provider-gateway = { workspace = true }
sip-pic = { workspace = true }
sin-node = { workspace = true }
sip-runtime-ollama = { workspace = true }
sip-runtime-llamacpp = { workspace = true }
