[project]
name = "sip-router-demo"
version = "0.1.2"
description = "End-to-end Sovereign Inference routing demo: a client routes a request across two provider gateways with signed receipts and failover."
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [{ name = "Joshua Warren" }]
dependencies = [
    "sip-router",
    "sip-provider-gateway",
    "sip-pic",
    "sin-node",
    "sip-protocol",
    "httpx>=0.27",
]

[project.scripts]
sip-router-demo = "sip_router_demo.demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sip_router_demo"]

[tool.uv.sources]
sip-router = { workspace = true }
sip-provider-gateway = { workspace = true }
sip-pic = { workspace = true }
sin-node = { workspace = true }
sip-protocol = { workspace = true }
