# Tauri desktop shell for Sovereign Inference.
[package]
name = "sovereign-inference-desktop"
version = "0.1.2"
description = "Desktop app bundling the Sovereign Inference node + OpenAI proxy with the dashboard."
authors = ["Joshua Warren"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
